fixed spacing in header

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -21,7 +21,7 @@
   }
 
   .intro-header {
-    padding: 5px;
+    padding-bottom: 10px;
     border-radius: 50px;
     width: 300px;
     color:white;
